Fixed icon alignment in web client navigation menu

--- a/SCMM.Web.Client/wwwroot/css/scmm-mudblazor-theme.css
+++ b/SCMM.Web.Client/wwwroot/css/scmm-mudblazor-theme.css
@@ -70,3 +70,7 @@
     overflow-x: hidden;
     overflow-y: auto;
 }
+
+.mud-nav-item-centered > .mud-nav-link {
+    align-items: center !important;
+}
